--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,9 @@ a.active {
     body {
       font-size: 13px;
     }
+    .flex {
+      flex-direction: column;
+    }
     .container {
       padding-left: 1rem;
       padding-right: 1rem;
